Improve Javadocs.