@@ -5,44 +5,43 @@ import java.awt.geom.Path2D;
 import java.awt.geom.Point2D;
 import java.util.List;
 
-/** The Class Path. */
+/**
+ * Represents a path consisting of a series of points.
+ */
 public class Path {
-
-  /** The path. */
   private final Path2D path2D;
 
   private final List<Point2D> points;
   private final Point2D start;
 
-  /** The target. */
   private final Point2D target;
 
+  /**
+   * Constructs a Path object from a given Path2D object.
+   *
+   * @param path the Path2D object representing the path.
+   */
   public Path(final Path2D path) {
     this.path2D = path;
     this.points = GeometricUtilities.getPoints(this.path2D);
     if (!this.points.isEmpty()) {
-      this.start = this.points.get(0);
-      this.target = this.points.get(this.points.size() - 1);
+      this.start = getPoints().getFirst();
+      this.target = getPoints().getLast();
     } else {
       this.start = null;
       this.target = null;
     }
   }
 
-  /***
-   * Instantiates a new path.
+  /**
+   * Constructs a Path object with specified start and target points, Path2D object, and list of points.
    *
-   * @param start
-   *          The starting point of the path
-   * @param target
-   *          The target of this instance
-   * @param path
-   *          The {@link Path2D} reference
-   * @param points
-   *          A list of all {@link Point2D} contained by the path
+   * @param start  the starting point of the path.
+   * @param target the target point of the path.
+   * @param path   the Path2D object representing the path.
+   * @param points the list of points that make up the path.
    */
-  public Path(
-      final Point2D start, final Point2D target, final Path2D path, final List<Point2D> points) {
+  public Path(final Point2D start, final Point2D target, final Path2D path, final List<Point2D> points) {
     this.start = start;
     this.target = target;
     this.path2D = path;
@@ -50,28 +49,38 @@ public class Path {
   }
 
   /**
-   * Gets the path.
+   * Gets the Path2D object representing the path.
    *
-   * @return the path
+   * @return the Path2D object.
    */
   public Path2D getPath() {
-    return this.path2D;
-  }
-
-  public List<Point2D> getPoints() {
-    return this.points;
-  }
-
-  public Point2D getStart() {
-    return this.start;
+    return path2D;
   }
 
   /**
-   * Gets the target.
+   * Gets the list of points that make up the path.
    *
-   * @return the target
+   * @return the list of points.
+   */
+  public List<Point2D> getPoints() {
+    return points;
+  }
+
+  /**
+   * Gets the starting point of the path.
+   *
+   * @return the starting point.
+   */
+  public Point2D getStart() {
+    return start;
+  }
+
+  /**
+   * Gets the target point of the path.
+   *
+   * @return the target point.
    */
   public Point2D getTarget() {
-    return this.target;
+    return target;
   }
 }
